# DataEase-MCP

./: .env.example  SOP.md  USAGE.md  debug_cs.py  debug_dashboard.py  deep_compare.py  fix_all.py  fix_canvas.py  fix_canvas2.py  fix_canvas_viewinfo.py  fix_chart.py  pyproject.toml  test_deep_results.json  test_results.json  verify_canvas.py
src/dataease_mcp/: auth.py  client.py  config.py  server.py  utils.py
src/dataease_mcp/tools/: canvas.py  chart.py  dashboard.py  dataset.py  datasource.py  export.py  share.py  template.py  user.py
tests/: cleanup.py  debug_tree.py  test_all.py  test_api_ds.py  test_auth.py  test_busi.py  test_dashboard_tree.py  test_deep.py  test_final.py  test_fixes.py  test_new_features.py
