[project]
name = "dataease-mcp-server"
version = "0.1.0"
description = "MCP Server for DataEase BI Platform"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pycryptodome>=3.20.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dataease-mcp = "dataease_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataease_mcp"]
